[build-system]
requires = ["meson-python", "cython>=0.28"]
build-backend = "mesonpy"

[project]
name = "cysignals"
version = "1.12.5"
description = "Interrupt and signal handling for Cython"
license = { file = "LICENSE" }
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "The Sage Developers", email = "sage-support@googlegroups.com" },
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System",
    "Topic :: Software Development :: Debuggers",
]
urls = { Homepage = "https://github.com/sagemath/cysignals" }
requires-python = ">=3.9,<3.14"

[project.entry-points.pkg_config]
cysignals = 'cysignals'

[tool.pytest.ini_options]
addopts = "--doctest-modules --import-mode importlib"
testpaths = "src tests"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "cibuildwheel>=2.23.3",
    "cython>=3.1.4",
    "meson>=1.9.0",
    "meson-python>=0.18.0",
    "ninja>=1.13.0",
    "pkgconf>=2.4.3.post2",
    "pytest>=8.4.2",
]

[tool.cibuildwheel]
skip = ["*-win32"]
test-groups = ["dev"]
test-sources = ["tests", "pyproject.toml"]
test-command = "python -m pytest"
build-frontend = "build[uv]"
build-verbosity = 1

[tool.cibuildwheel.windows]
config-settings = { setup-args = ["--vsenv"] }
